--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
   <base href="/"/>
-  <meta charset="utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Search DEVV</title>
-  <link rel="stylesheet" href="assets/sass/app.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/vendor/normalize.css">
+  <link rel="stylesheet" type="text/css" href="lib/flexboxgrid/dist/flexboxgrid.min.css">
+  <link rel="stylesheet" type="text/css" href="sass/main.css">
 </head>
 <body>
 
-  <header ui-view="header" class="header"></header>
+  <header ui-view="header" class="header row line"></header>
 
-  <div ui-view="content" class="content"></div>
+  <div ui-view="content" class="content row"></div>
 
-  <footer ui-view="footer" class="footer"></footer>
+  <footer ui-view="footer" class="footer row"></footer>
 
-  <script src="lib/requirejs/require.js" data-main="js/main.js"></script>
+<script src="lib/requirejs/require.js" type="text/javascript" data-main="scripts/main.js"></script>
 </body>
 </html>
